[gd_scene load_steps=11 format=2]

[ext_resource path="res://tests/database/database.gd" type="Script" id=1]
[ext_resource path="res://assets/buttons/normal_button.png" type="Texture" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://fonts/PermanentMarker_30.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/buttons/normal_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/buttons/normal_button_disabled.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/normal_button.gd" type="Script" id=7]
[ext_resource path="res://fonts/PermanentMarker.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://fonts/PermanentMarker_18.tres" type="DynamicFont" id=9]


[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 8 )

[node name="database" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 376.0
margin_top = 13.0
margin_right = 498.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 4 )
text = "Database Tests"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" parent="." instance=ExtResource( 5 )]
margin_right = 190.354
margin_bottom = 44.6465
label = "Back"

[node name="test_database" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 65.0
margin_right = 190.0
margin_bottom = 110.0
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
label = "Test Database"

[node name="label" type="RichTextLabel" parent="test_database"]
margin_left = 10.0
margin_right = 180.0
margin_bottom = 45.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_lock_": true
}

[node name="console" type="RichTextLabel" parent="."]
margin_left = 250.586
margin_top = 117.012
margin_right = 946.586
margin_bottom = 522.012
bbcode_enabled = true
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 131.0
margin_right = 34.0
margin_bottom = 155.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="login_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Login"

[node name="get_ref_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 155.0
margin_right = 34.0
margin_bottom = 179.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="get_ref_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Get RTDB Reference"

[node name="push_data_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 179.0
margin_right = 34.0
margin_bottom = 203.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="push_data_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Push Data"

[node name="update_data_check" type="CheckBox" parent="." groups=[
"tests",
]]
margin_left = 10.0
margin_top = 203.0
margin_right = 34.0
margin_bottom = 227.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="update_data_check"]
margin_left = 26.0596
margin_top = -3.06488
margin_right = 76.0596
margin_bottom = 22.9351
custom_fonts/font = ExtResource( 9 )
text = "Update Data"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="test_database" to="." method="_on_test_database_pressed"]
